--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "commonjs",
+  "watch": ["src"],
+  "ext": "ts",
+  "exec": "ts-node src/server.ts",
+  "ignore": ["node_modules"],
   "scripts": {
-    "dev": "tsc -b && nodemon ./dist/server.js"
+    "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts"
   },
   "keywords": [],
   "author": "",
@@ -12,17 +16,22 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
-    "nodemon": "^3.1.9",
     "zod": "^3.24.2"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
+    "@types/mongoose": "^5.11.96",
     "@types/node": "^22.13.4",
+    "nodemon": "^3.1.9",
+    "ts-node": "^10.9.2",
     "typescript": "^5.7.3"
   }
 }
