--- a/package.json
+++ b/package.json
@@ -3,10 +3,14 @@
   "version": "1.0.0",
   "main": "index.js",
   "type": "commonjs",
-  "watch": ["src"],
+  "watch": [
+    "src"
+  ],
   "ext": "ts",
   "exec": "ts-node src/server.ts",
-  "ignore": ["node_modules"],
+  "ignore": [
+    "node_modules"
+  ],
   "scripts": {
     "dev": "nodemon --watch src --ext ts --exec ts-node src/server.ts"
   },
@@ -16,11 +20,15 @@
   "description": "",
   "dependencies": {
     "bcryptjs": "^3.0.0",
+    "cloudinary": "^1.41.3",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
+    "firebase-admin": "^13.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.10.1",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "zod": "^3.24.2"
   },
   "devDependencies": {
@@ -29,6 +37,7 @@
     "@types/express": "^5.0.0",
     "@types/jsonwebtoken": "^9.0.8",
     "@types/mongoose": "^5.11.96",
+    "@types/multer": "^1.4.12",
     "@types/node": "^22.13.4",
     "nodemon": "^3.1.9",
     "ts-node": "^10.9.2",
